Correcting footer style class - linked to menu name

--- a/themes/tiny-framework-downunder/style.css
+++ b/themes/tiny-framework-downunder/style.css
@@ -972,11 +972,11 @@ ul {
 /*
 	Bobby Joseph, 27Oct2015: Horizontal menu in footer, removing social menu
 */
-.menu-footer-menu-container .menu-item{
+.menu-footer-container .menu-item{
 	display: inline;	
 }
 
-.menu-footer-menu-container .menu{
+.menu-footer-container .menu{
 	text-align: right;
 }
 
