--- a/themes/tiny-framework-downunder/style.css
+++ b/themes/tiny-framework-downunder/style.css
@@ -998,10 +998,6 @@ ul {
 	text-align: right;
 }
 
-.site-info-2{
-	display: none;
-}
-
 .site-info{
 	max-width: 100%;
 }
@@ -1024,4 +1020,8 @@ ul {
 #logo-slider-wraper{
 	left: 0px !important;
 	margin: auto;
+}
+
+.elist{
+	text-align: right;
 }
