Reducing font-size from 16px to 14px

--- a/themes/tiny-framework-downunder/style.css
+++ b/themes/tiny-framework-downunder/style.css
@@ -1025,3 +1025,8 @@ ul {
 .elist{
 	text-align: right;
 }
+
+body, button, input, select, textarea{
+	font-size: 14px;
+    font-size: 0.875rem;
+}
