fix for menu accessibility
Signed-off-by: U-IBM-5E167556H\mustali <mustali@IBM-5E167556H.au.ibm.com>

--- a/themes/tiny-framework-downunder/style.css
+++ b/themes/tiny-framework-downunder/style.css
@@ -1337,3 +1337,11 @@ a{
 	margin-bottom:0px !important;
 	font-size: 18px;
 }
+
+.main-navigation .focus > ul {
+		display : block!important;
+}
+
+.main-navigation ul.nav-menu ul.sub-menu {
+		display : none;
+}
