media query for menu.
Signed-off-by: U-IBM-5E167556H\mustali <mustali@IBM-5E167556H.au.ibm.com>

--- a/themes/tiny-framework-downunder/style.css
+++ b/themes/tiny-framework-downunder/style.css
@@ -1338,6 +1338,8 @@ a{
 	font-size: 18px;
 }
 
+@media screen and (min-width: 783px) {
+    
 .main-navigation .focus > ul {
 	display : block !important;
 }
@@ -1346,6 +1348,7 @@ a{
 	display : none;
 }
 
+}
 #breadcrumbs{
 	background-color: linen;
 }
